--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -4,5 +4,10 @@
         "name": "Александр Гумроян",
         "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
         "description": "Стремлюсь к перфекционизму и создаю визуально привлекательные и удобные приложения, постоянно совершенствуя свои навыки."
+    },
+    "LanguageSwitcher": {
+        "locale": "{locale, select, ru {Русский} en {Инглиш} cs {Чешский} other {Неизвестный}}",
+        "label": "Язык",
+        "aria-label": "Сменить язык"
     }
 }
