--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -4,5 +4,10 @@
         "name": "Aleksandr Gumroian",
         "about": "Kreativní a nadšený frontendový vývojář se sídlem v Česku 🇨🇿",
         "description": "Dbám na přesnost a usiluji o tvorbu vizuálně atraktivních a uživatelsky přívětivých aplikací, přičemž neustále zdokonaluji své dovednosti."
+    },
+    "LanguageSwitcher": {
+        "locale": "{locale, select, ru {Ruština} en {Angličtina} cs {Čeština} other {Neznámé}}",
+        "label": "Jazyk",
+        "aria-label": "Změnit jazyk"
     }
 }
