Update English localization for 'uses' to 'What I use' for clarity

--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -26,7 +26,7 @@
             "about": "About",
             "blog": "Blog",
             "projects": "Projects",
-            "uses": "Uses",
+            "uses": "What I use",
             "contact": "Contact"
         }
     },
@@ -41,7 +41,7 @@
             "blog": "Blog",
             "projects": "Projects",
             "contact": "Contact",
-            "uses": "Uses"
+            "uses": "What I use"
         },
         "other": {
             "title": "Other",
