Update English localization for 'Featured posts' to 'Latest posts' for improved accuracy

--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -10,7 +10,7 @@
             "altImage": "Aleksandr Gumroian on a baseball field, holding a baseball bat and ball in his hands, smiling but looking away. In the background, green grass and a stadium."
         },
         "FeaturedPosts": {
-            "title": "Featured posts",
+            "title": "Latest posts",
             "all": "View all",
             "noPosts": "No posts found."
         },
