Add alt text for logo in footer and update localization for altLogo

--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -34,6 +34,7 @@
         "name": "Aleksandr Gumroian",
         "about": "Kreativní a nadšený frontendový vývojář se sídlem v Česku 🇨🇿",
         "rights": "CC BY-SA 4.0.",
+        "altLogo": "Logo aleksan4eg.dev",
         "navigation": {
             "title": "Navigace",
             "home": "Domů",
