--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -34,6 +34,7 @@
         "name": "Александр Гумроян",
         "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
         "rights": "CC BY-SA 4.0.",
+        "altLogo": "Логотип aleksan4eg.dev",
         "navigation": {
             "title": "Навигация",
             "home": "Главная",
