--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -34,6 +34,7 @@
         "name": "Aleksandr Gumroian",
         "about": "Creative and enthusiastic Frontend Software Engineer based in Czechia 🇨🇿",
         "rights": "CC BY-SA 4.0.",
+        "altLogo": "Logo of aleksan4eg.dev",
         "navigation": {
             "title": "Navigation",
             "home": "Home",
