--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -1,4 +1,16 @@
 {
+    "common": {
+        "altLogo": "Logo of aleksan4eg.dev",
+        "navigation": {
+            "title": "Navigation",
+            "home": "Home",
+            "about": "About",
+            "blog": "Blog",
+            "projects": "Projects",
+            "uses": "What I use",
+            "contact": "Contact"
+        }
+    },
     "HomePage": {
         "Intro": {
             "me": "I am",
@@ -20,30 +32,10 @@
             "noProjects": "No projects found."
         }
     },
-    "Header": {
-        "navigation": {
-            "home": "Home",
-            "about": "About",
-            "blog": "Blog",
-            "projects": "Projects",
-            "uses": "What I use",
-            "contact": "Contact"
-        }
-    },
     "Footer": {
         "name": "Aleksandr Gumroian",
         "about": "Creative and enthusiastic Frontend Software Engineer based in Czechia 🇨🇿",
         "rights": "CC BY-SA 4.0.",
-        "altLogo": "Logo of aleksan4eg.dev",
-        "navigation": {
-            "title": "Navigation",
-            "home": "Home",
-            "about": "About",
-            "blog": "Blog",
-            "projects": "Projects",
-            "contact": "Contact",
-            "uses": "What I use"
-        },
         "other": {
             "title": "Other",
             "github": "GitHub",
