--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -1,4 +1,16 @@
 {
+    "common": {
+        "altLogo": "Логотип aleksan4eg.dev",
+        "navigation": {
+            "title": "Навигация",
+            "home": "Главная",
+            "about": "Обо мне",
+            "blog": "Блог",
+            "projects": "Проекты",
+            "uses": "Что использую",
+            "contact": "Контакты"
+        }
+    },
     "HomePage": {
         "Intro": {
             "me": "Я —",
@@ -20,30 +32,10 @@
             "noProjects": "Проекты не найдены."
         }
     },
-    "Header": {
-        "navigation": {
-            "home": "Главная",
-            "about": "Обо мне",
-            "blog": "Блог",
-            "projects": "Проекты",
-            "uses": "Что использую",
-            "contact": "Контакты"
-        }
-    },
     "Footer": {
         "name": "Александр Гумроян",
         "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
         "rights": "CC BY-SA 4.0.",
-        "altLogo": "Логотип aleksan4eg.dev",
-        "navigation": {
-            "title": "Навигация",
-            "home": "Главная",
-            "about": "Обо мне",
-            "blog": "Блог",
-            "projects": "Проекты",
-            "contact": "Контакты",
-            "uses": "Что использую"
-        },
         "other": {
             "title": "Прочее",
             "github": "GitHub",
