Change English translation in Russian dictionary

--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -46,7 +46,7 @@
         }
     },
     "LanguageSwitcher": {
-        "locale": "{locale, select, ru {Русский} en {Инглиш} cs {Чешский} other {Неизвестный}}",
+        "locale": "{locale, select, ru {Русский} en {Английский} cs {Чешский} other {Неизвестный}}",
         "label": "Язык",
         "ariaLabel": "Сменить язык"
     },
