--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -32,6 +32,26 @@
             "noProjects": "Nebyly nalezeny žádné projekty."
         }
     },
+    "AboutPage": {
+        "title": "O mně",
+        "first": "Ahoj! Jmenuji se Aleksandr Gumroian a jsem softwarový inženýr se zájmem o tvorbu uživatelsky přívětivých, přístupných a výkonných webových aplikací.",
+        "second": "Mým hlavním zaměřením je frontendový vývoj se specializací na React. Dobře ovládám JavaScript, TypeScript a CSS a jsem vždy otevřený učení se novým technologiím a nástrojům. Ve volném čase přispívám do open-source projektů, sdílím své myšlenky na ",
+        "secondLink": "blogu",
+        "secondExtra": " a experimentuji s nápady, které mě inspirují.",
+        "imageAlt": "Aleksandr Gumroian stojící v brýlích, pozadí je rozmazané s městskou krajinou, řekou a mosty.",
+        "imageCaption": "Pohled na Prahu z Metronomu (Stalin), Česko - Srpen '21",
+        "third": "Když zrovna nepracuji, trávím rád čas venku — chodím na ryby, hraji volejbal nebo stolní tenis, venčím psa, objevuji nová místa nebo se setkávám s přáteli.",
+        "fourth": "Pokud se chcete ",
+        "fourthLink": "spojit",
+        "fourthExtra": " probrat možnou spolupráci nebo se jen seznámit, budu rád za vaši zprávu. Najdete mě na ",
+        "github": "GitHubu",
+        "fourthExtra2": " a  ",
+        "linkedin": "LinkedInu",
+        "fourthExtra3": " — jsem otevřený novým příležitostem a projektům.",
+        "fifth": "Zajímá vás, jaké nástroje a technologie používám? Podívejte se na moji stránku ",
+        "fifthLink": "Nástroje",
+        "fifthExtra": ". Mám také playlist s hudbou, který pravidelně aktualizuji — budu rád, když si ho poslechnete!"
+    },
     "Footer": {
         "name": "Aleksandr Gumroian",
         "about": "Kreativní a nadšený frontendový vývojář se sídlem v Česku 🇨🇿",
