--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -32,6 +32,26 @@
             "noProjects": "Проекты не найдены."
         }
     },
+    "AboutPage": {
+        "title": "Обо мне",
+        "first": "Привет! Я — Александр Гумроян, инженер-программист, увлечённый созданием удобных, доступных и высокопроизводительных веб-приложений.",
+        "second": "Мой основной фокус — фронтенд-разработка с акцентом на React. Я хорошо разбираюсь в JavaScript, TypeScript и CSS и всегда открыт к изучению новых технологий и инструментов. Вне работы я вношу вклад в open-source проекты, делюсь мыслями в своем ",
+        "secondLink": "блоге",
+        "secondExtra": " и экспериментирую с идеями, которые меня вдохновляют.",
+        "imageAlt": "Александр Гумроян в солнечных очках на фоне городского пейзажа, реки и мостов, фон размытый.",
+        "imageCaption": "Вид на Прагу с Метронома (Сталин), Чехия — август 2021 года",
+        "third": "Вне работы я часто бываю на свежем воздухе — рыбачу, играю в волейбол или настольный теннис, гуляю с собакой, исследую новые места или просто провожу время с друзьями.",
+        "fourth": "Если вы хотите ",
+        "fourthLink": "связаться",
+        "fourthExtra": ", обсудить сотрудничество или просто познакомиться, буду рад вашему сообщению. Найти меня можно на  ",
+        "github": "GitHub",
+        "fourthExtra2": " and ",
+        "linkedin": "LinkedIn",
+        "fourthExtra3": " — я открыт для новых возможностей и проектов.",
+        "fifth": "Интересно, какие устройства, технологии и ПО я использую в работе? Посмотрите мою подборку на странице ",
+        "fifthLink": "Инструменты",
+        "fifthExtra": ". Также у меня есть плейлист с музыкой, который я регулярно обновляю — буду рад, если заглянете!"
+    },
     "Footer": {
         "name": "Александр Гумроян",
         "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
