fix: correct translations for theme selector labels in Czech

--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -71,10 +71,10 @@
         "ariaLabel": "Změnit jazyk"
     },
     "ThemeSelector": {
-        "label": "Téma",
-        "ariaLabel": "Změnit téma",
-        "light": "Světlé",
-        "dark": "Tmavé",
-        "system": "Systémové"
+        "label": "Motiv vzhledu",
+        "ariaLabel": "Změnit motiv vzhledu",
+        "light": "Světlý",
+        "dark": "Tmavý",
+        "system": "Systémový"
     }
 }
