--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -7,7 +7,7 @@
             "about": "Обо мне",
             "blog": "Блог",
             "projects": "Проекты",
-            "uses": "Что использую",
+            "uses": "Инструменты",
             "contact": "Контакты"
         }
     },
@@ -51,6 +51,18 @@
         "fifth": "Интересно, какие устройства, технологии и ПО я использую в работе? Посмотрите мою подборку на странице ",
         "fifthLink": "Инструменты",
         "fifthExtra": ". Также у меня есть плейлист с музыкой, который я регулярно обновляю — буду рад, если заглянете!"
+    },
+    "BlogPage": {
+        "title": "Блог"
+    },
+    "ProjectsPage": {
+        "title": "Проекты"
+    },
+    "UsesPage": {
+        "title": "Инструменты"
+    },
+    "ContactPage": {
+        "title": "Контакты"
     },
     "Footer": {
         "name": "Александр Гумроян",
