--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -14,6 +14,7 @@
     "HomePage": {
         "Intro": {
             "me": "Я —",
+            "greeting": "👋🏻",
             "name": "Александр Гумроян",
             "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
             "description": "Стремлюсь к перфекционизму и создаю визуально привлекательные и удобные приложения, постоянно совершенствуя свои навыки.",
@@ -66,8 +67,9 @@
     },
     "Footer": {
         "name": "Александр Гумроян",
+        "copy": "© ",
         "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
-        "rights": "CC BY-SA 4.0.",
+        "rights": ". CC BY-SA 4.0.",
         "other": {
             "title": "Прочее",
             "github": "GitHub",
