--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -1,6 +1,8 @@
 {
     "common": {
         "altLogo": "Логотип aleksan4eg.dev",
+        "name": "Александр Гумроян",
+        "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
         "navigation": {
             "title": "Навигация",
             "home": "Главная",
@@ -15,8 +17,6 @@
         "Intro": {
             "me": "Я —",
             "greeting": "👋🏻",
-            "name": "Александр Гумроян",
-            "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
             "description": "Стремлюсь к перфекционизму и создаю визуально привлекательные и удобные приложения, постоянно совершенствуя свои навыки.",
             "cta": "Обо мне",
             "ctaAriaLabel": "Узнать больше об Александре Гумрояне",
@@ -24,12 +24,12 @@
         },
         "FeaturedPosts": {
             "title": "Последние публикации",
-            "all": "Посмотреть все",
+            "all": "Больше",
             "noPosts": "Публикации не найдены."
         },
         "FeaturedProjects": {
             "title": "Избранные проекты",
-            "all": "Посмотреть все",
+            "all": "Больше",
             "noProjects": "Проекты не найдены."
         }
     },
@@ -66,9 +66,7 @@
         "title": "Контакты"
     },
     "Footer": {
-        "name": "Александр Гумроян",
         "copy": "© ",
-        "about": "Креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿",
         "rights": ". CC BY-SA 4.0.",
         "other": {
             "title": "Прочее",
