--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -51,7 +51,10 @@
         "fourthExtra3": " — я открыт для новых возможностей и проектов.",
         "fifth": "Интересно, какие устройства, технологии и ПО я использую в работе? Посмотрите мою подборку на странице ",
         "fifthLink": "Инструменты",
-        "fifthExtra": ". Также у меня есть плейлист с музыкой, который я регулярно обновляю — буду рад, если заглянете!"
+        "fifthExtra": ". Также у меня есть плейлист с музыкой, который я регулярно обновляю — буду рад, если заглянете!",
+        "Skills": {
+            "title": "Навыки"
+        }
     },
     "BlogPage": {
         "title": "Блог"
