--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -54,6 +54,15 @@
         "fifthExtra": ". Также у меня есть плейлист с музыкой, который я регулярно обновляю — буду рад, если заглянете!",
         "Skills": {
             "title": "Навыки"
+        },
+        "Experience": {
+            "title": "Опыт работы",
+            "position1": "Редактор веб-контента",
+            "date1": "Октябрь 2018 – Май 2020",
+            "description1": "Редактировал и управлял контентом, обеспечивая точность и единообразие для крупных клиентов, таких как Microsoft и Ford.",
+            "position2": "Инженер по исследованиям и разработкам",
+            "date2": "Июнь 2020 – настоящее время",
+            "description2": "Работаю над несколькими проектами, в первую очередь над проектом Turris, который направлен на обеспечение сетевой безопасности и конфиденциальности."
         }
     },
     "BlogPage": {
