--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -35,7 +35,10 @@
     },
     "AboutPage": {
         "title": "Обо мне",
-        "first": "Привет! Я — Александр Гумроян, инженер-программист, увлечённый созданием удобных, доступных и высокопроизводительных веб-приложений.",
+        "metaTitle": "Обо мне — Александр Гумроян | aleksa4eg.dev",
+        "metaDescription": "Александр Гумроян — креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿. Он увлечён созданием удобных, доступных и высокопроизводительных веб-приложений.",
+        "metaKeywords": "Александр Гумроян, Frontend Software Engineer, Чехия, веб-приложения, удобные, доступные, высокопроизводительные",
+        "first": "Привет! Я — Александр Гумроян, разработчик программного обеспечения, увлечённый созданием удобных, доступных и высокопроизводительных веб-приложений.",
         "second": "Мой основной фокус — фронтенд-разработка с акцентом на React. Я хорошо разбираюсь в JavaScript, TypeScript и CSS и всегда открыт к изучению новых технологий и инструментов. Вне работы я вношу вклад в open-source проекты, делюсь мыслями в своем ",
         "secondLink": "блоге",
         "secondExtra": " и экспериментирую с идеями, которые меня вдохновляют.",
@@ -61,7 +64,7 @@
             "date1": "Октябрь 2018 – Май 2020",
             "description1": "Редактировал и управлял контентом, обеспечивая точность и единообразие для крупных клиентов, таких как Microsoft и Ford.",
             "position2": "Инженер по исследованиям и разработкам",
-            "date2": "Июнь 2020 – настоящее время",
+            "date2": "Июнь 2020 – Сегодня",
             "description2": "Работаю над несколькими проектами, в первую очередь над проектом Turris, который направлен на обеспечение сетевой безопасности и конфиденциальности."
         }
     },
@@ -100,5 +103,10 @@
         "light": "Светлая",
         "dark": "Тёмная",
         "system": "Системная"
+    },
+    "RootLayout": {
+        "metaTitle": "Александр Гумроян — Frontend Software Engineer | aleksa4eg.dev",
+        "metaDescription": "А. Гумроян — креативный и увлечённый фронтенд-разработчик, живущий в Чехии 🇨🇿. Он фокусируется на создании удобных, доступных и высокопроизводительных веб-приложений.",
+        "metaKeywords": "А. Гумроян, Frontend Software Engineer, Чехия, веб-приложения, удобные, доступные, высокопроизводительные"
     }
 }
