--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -35,6 +35,9 @@
     },
     "AboutPage": {
         "title": "O mně",
+        "metaTitle": "O mně — Aleksandr Gumroian | aleksa4eg.dev",
+        "metaDescription": "A. Gumroian je kreativní a nadšený frontendový vývojář se sídlem v Česku 🇨🇿. Má zájem o vytváření uživatelsky přívětivých, přístupných a výkonných webových aplikací.",
+        "metaKeywords": "Aleksandr Gumroian, Frontend Software Engineer, Česko, webové aplikace, uživatelsky přívětivé, přístupné, výkonné",
         "first": "Ahoj! Jmenuji se Aleksandr Gumroian a jsem softwarový inženýr se zájmem o tvorbu uživatelsky přívětivých, přístupných a výkonných webových aplikací.",
         "second": "Mým hlavním zaměřením je frontendový vývoj se specializací na React. Dobře ovládám JavaScript, TypeScript a CSS a jsem vždy otevřený učení se novým technologiím a nástrojům. Ve volném čase přispívám do open-source projektů, sdílím své myšlenky na ",
         "secondLink": "blogu",
@@ -100,5 +103,10 @@
         "light": "Světlý",
         "dark": "Tmavý",
         "system": "Systémový"
+    },
+    "RootLayout": {
+        "metaTitle": "Aleksandr Gumroian — Frontend Software Engineer | aleksa4eg.dev",
+        "metaDescription": "A. Gumroian je kreativní a nadšený frontendový vývojář se sídlem v Česku 🇨🇿. Má zájem o vytváření uživatelsky přívětivých, přístupných a výkonných webových aplikací.",
+        "metaKeywords": "A. Gumroian, Frontend Software Engineer, Česko, webové aplikace, uživatelsky přívětivé, přístupné, výkonné"
     }
 }
