--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -66,6 +66,18 @@
             "position2": "Инженер по исследованиям и разработкам",
             "date2": "Июнь 2020 – Сегодня",
             "description2": "Работаю над несколькими проектами, в первую очередь над проектом Turris, который направлен на обеспечение сетевой безопасности и конфиденциальности."
+        },
+        "Activities": {
+            "title": "Досуг",
+            "Book": {
+                "progress": "{progress, number} из {capacity, number} страниц",
+                "pagesLeft": "{pagesLeft, plural, =0 {0 страниц осталось} =1 {1 страница осталась} other {# страниц осталось}}",
+                "finished": "Завершено",
+                "reading": "Читаю",
+                "notStarted": "Не начинал",
+                "others": "и другие",
+                "by": "от"
+            }
         }
     },
     "BlogPage": {
