Update personal descriptions in localization files for improved clarity and engagement

--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -44,7 +44,7 @@
         "secondExtra": " a experimentuji s nápady, které mě inspirují.",
         "imageAlt": "Aleksandr Gumroian stojící v brýlích, pozadí je rozmazané s městskou krajinou, řekou a mosty.",
         "imageCaption": "Pohled na Prahu z Metronomu (Stalin), Česko - Srpen '21",
-        "third": "Když zrovna nepracuji, trávím rád čas venku — chodím na ryby, hraji volejbal nebo stolní tenis, venčím psa, objevuji nová místa nebo se setkávám s přáteli.",
+        "third": "Když zrovna nepracuji, trávím rád čas venku — chodím na ryby, hraji volejbal nebo stolní tenis, venčím psa, kutím nové DIY projekty nebo jen tak objevují nová místa a trávím čas s přáteli.",
         "fourth": "Pokud se chcete ",
         "fourthLink": "spojit",
         "fourthExtra": " probrat možnou spolupráci nebo se jen seznámit, budu rád za vaši zprávu. Najdete mě na ",
