--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -44,7 +44,7 @@
         "secondExtra": " и экспериментирую с идеями, которые меня вдохновляют.",
         "imageAlt": "Александр Гумроян в солнечных очках на фоне городского пейзажа, реки и мостов, фон размытый.",
         "imageCaption": "Вид на Прагу с Метронома (Сталин), Чехия — август 2021 года",
-        "third": "Вне работы я часто бываю на свежем воздухе — рыбачу, играю в волейбол или настольный теннис, гуляю с собакой, исследую новые места или просто провожу время с друзьями.",
+        "third": "Вне работы я часто бываю на свежем воздухе — рыбачу, играю в волейбол или настольный теннис, выгуливаю собаку, занимаюсь DIY-проектами или просто исследую новые места и провожу время с друзьями.",
         "fourth": "Если вы хотите ",
         "fourthLink": "связаться",
         "fourthExtra": ", обсудить сотрудничество или просто познакомиться, буду рад вашему сообщению. Найти меня можно на  ",
