--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -44,7 +44,7 @@
         "secondExtra": ", and\n                experiment with ideas that spark my curiosity.",
         "imageAlt": "Aleksandr Gumroian standing in sunglasses, the background is out of focus with a cityscape, a river and bridges.",
         "imageCaption": "View on Prague from Metronome (Stalin), Czechia - Aug. '21",
-        "third": "When I’m not coding, you’ll likely find me outdoors — fishing, playing volleyball or ping-pong, walking my dog, or just exploring new places and spending time with friends.",
+        "third": "When I’m not coding, you’ll likely find me outdoors — fishing, playing volleyball or ping-pong, walking my dog, tinkering a new DIY project or just exploring new places and spending time with friends.",
         "fourth": "If you'd like to connect, collaborate, or just say hello, feel free to ",
         "fourthLink": "reach out",
         "fourthExtra": " or find me and connect on ",
