--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -70,8 +70,8 @@
         "Activities": {
             "title": "Досуг",
             "Book": {
-                "progress": "{progress, number} из {capacity, number} страниц",
-                "pagesLeft": "{pagesLeft, plural, =0 {0 страниц осталось} =1 {1 страница осталась} other {# страниц осталось}}",
+                "progress": "Страница {progress, number} из {capacity, number} страниц",
+                "pagesLeft": "{pagesLeft, plural, one {# страница осталась} few {# страницы осталось} many {# страниц осталось} other {# страниц осталось}}",
                 "finished": "Завершено",
                 "reading": "Читаю",
                 "notStarted": "Не начинал",
