Refactor Skills component to use server-side translations and enhance UI with popovers
- Updated Skills component to fetch translations using getTranslations from next-intl/server.
- Replaced static skill descriptions with dynamic translations from JSON data.
- Enhanced UI by implementing popovers for skill descriptions, improving user interaction.
- Updated CSS styles for buttons and popovers to maintain design consistency.
- Added new skill descriptions in English, Czech, and Russian localization files.

--- a/i18n/messages/cs.json
+++ b/i18n/messages/cs.json
@@ -56,7 +56,29 @@
         "fifthLink": "Nástroje",
         "fifthExtra": ". Mám také playlist s hudbou, který pravidelně aktualizuji — budu rád, když si ho poslechnete!",
         "Skills": {
-            "title": "Dovednosti"
+            "title": "Dovednosti",
+            "html": "Nejnovější standard HTML, představující sémantické značky a podporu multimédií pro moderní webové aplikace.",
+            "css": "Nejnovější verze CSS, zahrnující animace, flexbox, grid a nástroje pro responsivní design.",
+            "js": "Dynamický skriptovací jazyk pro webovou interaktivitu, API a vývoj na straně klienta i serveru.",
+            "ts": "Programovací jazyk postavený na JavaScriptu, poskytující statickou typizaci a vylepšené nástroje pro vývoj.",
+            "react": "JavaScriptová knihovna pro vytváření UI komponent, vyvinutá společností Meta, používající virtuální DOM pro efektivitu.",
+            "next": "React framework pro renderování na straně serveru, statické weby a full-stack webové aplikace.",
+            "vue": "Progresivní JavaScriptový framework pro vytváření UI s jednoduchou a flexibilní architekturou.",
+            "redux": "Knihovna pro správu stavu pro JavaScriptové aplikace, centralizující tok dat ve složitých aplikacích.",
+            "tailwind": "CSS framework s utilitárními třídami pro rychlý vývoj uživatelského rozhraní.",
+            "figma": "Webový nástroj pro UI/UX design pro kolaborativní návrh, prototypování a zpětnou vazbu.",
+            "jest": "JavaScriptový testovací framework zaměřený na jednoduchost, podporující unit a snapshot testování.",
+            "python": "Vysokoúrovňový programovací jazyk široce používaný ve webovém vývoji, analýze dat a strojovém učení.",
+            "node": "JavaScript runtime prostředí pro běh JS kódu mimo prohlížeč, umožňující psaní serverového kódu pro webové stránky a aplikace.",
+            "mongo": "NoSQL databáze používající flexibilní, JSON-podobné dokumenty pro vysoce výkonné ukládání dat.",
+            "postgresql": "Výkonná open-source relační databáze s pokročilými SQL funkcemi a škálovatelností.",
+            "webpack": "Nástroj pro balení modulů pro JavaScriptové aplikace, optimalizující zdroje pro produkční nasazení.",
+            "git": "Distribuovaný systém pro správu verzí pro sledování změn v kódu a zajištění spolupráce týmu.",
+            "graphql": "Dotazovací jazyk pro API, který umožňuje klientům dotazovat se pouze na potřebná data.",
+            "rest": "Architektonický styl pro webové služby, který používá HTTP požadavky pro přístup a manipulaci s daty.",
+            "motion": "JavaScriptová knihovna pro vytváření animací a přechodů ve webových aplikacích.",
+            "eslint": "Nástroj pro statickou analýzu kódu pro identifikaci a opravu problémů v JavaScript/TypeScript kódu.",
+            "prettier": "Nástroj pro formátování kódu, který zajišťuje konzistentní styl a čitelnost napříč projekty."
         },
         "Experience": {
             "title": "Zkušenosti",
