--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -56,7 +56,29 @@
         "fifthLink": "uses",
         "fifthExtra": " page. I also keep a regularly updated playlist of what I’m listening to — feel free to give it a listen.",
         "Skills": {
-            "title": "Skills"
+            "title": "Skills",
+            "html": "The latest HTML standard, introducing semantic tags and multimedia support for modern web apps.",
+            "css": "The newest CSS version, featuring animations, flexbox, grid, and responsive design tools.",
+            "js": "A dynamic scripting language for web interactivity, APIs, and frontend/backend development.",
+            "ts": "A typed superset of JavaScript that compiles to plain JS, adding static types for better tooling and scalability.",
+            "react": "A JavaScript library for building UI components, developed by Meta, using a virtual DOM for efficiency.",
+            "next": "A React framework for server-side rendering, static sites, and full-stack web applications.",
+            "vue": "A progressive JavaScript framework for building UIs with a simple, flexible architecture.",
+            "redux": "A state management library for JavaScript apps, centralizing data flow in complex applications.",
+            "tailwind": "A utility-first CSS framework for rapid UI development with pre-defined classes.",
+            "figma": "A web-based UI/UX design tool for collaborative design, prototyping, and feedback.",
+            "jest": "A JavaScript testing framework focused on simplicity, supporting unit and snapshot testing.",
+            "python": "A high-level programming language known for its readability and versatility, widely used in web development, data analysis, and AI.",
+            "node": "A JavaScript runtime for server-side development, enabling scalable, event-driven apps.",
+            "mongo": "A NoSQL database using flexible, JSON-like documents for high-performance data storage.",
+            "postgresql": "A powerful open-source relational database with advanced SQL features and scalability.",
+            "webpack": "A module bundler for JavaScript apps, optimizing assets for production deployment.",
+            "git": "A distributed version control system for tracking code changes and enabling team collaboration.",
+            "graphql": "A query language for APIs and a runtime for executing those queries with your existing data.",
+            "rest": "An architectural style for web services using HTTP requests to access and manipulate data.",
+            "motion": "A JavaScript library for creating animations and transitions in web applications.",
+            "eslint": "A static code analysis tool for identifying and fixing problems in JavaScript/TypeScript code.",
+            "prettier": "An opinionated code formatter for consistent code style across JavaScript, TypeScript, and other languages."
         },
         "Experience": {
             "title": "Experience",
