--- a/i18n/messages/ru.json
+++ b/i18n/messages/ru.json
@@ -44,7 +44,7 @@
         "secondExtra": " и экспериментирую с идеями, которые меня вдохновляют.",
         "imageAlt": "Александр Гумроян в солнечных очках на фоне городского пейзажа, реки и мостов, фон размытый.",
         "imageCaption": "Вид на Прагу с Метронома (Сталин), Чехия — август 2021 года",
-        "third": "Вне работы я часто бываю на свежем воздухе — рыбачу, играю в волейбол или настольный теннис, выгуливаю собаку, занимаюсь DIY-проектами или просто исследую новые места и провожу время с друзьями.",
+        "third": "Вне работы я часто бываю на свежем воздухе — рыбачу, играю в волейбол или настольный теннис, выгуливаю собаку, занимаюсь \"сделай это сам\"-проектами или просто исследую новые места и провожу время с друзьями.",
         "fourth": "Если вы хотите ",
         "fourthLink": "связаться",
         "fourthExtra": ", обсудить сотрудничество или просто познакомиться, буду рад вашему сообщению. Найти меня можно на  ",
@@ -56,7 +56,29 @@
         "fifthLink": "Инструменты",
         "fifthExtra": ". Также у меня есть плейлист с музыкой, который я регулярно обновляю — буду рад, если заглянете!",
         "Skills": {
-            "title": "Навыки"
+            "title": "Навыки",
+            "html": "Последний стандарт HTML, представляющий семантические теги и поддержку мультимедиа для современных веб-приложений.",
+            "css": "Новейшая версия CSS, включающая анимации, Flexbox, Grid и инструменты для адаптивного дизайна.",
+            "js": "Язык программирования для веб-интерактивности, API и разработки как на стороне клиента, так и на стороне сервера.",
+            "ts": "Язык программирования, построенный на JavaScript, предоставляющий статическую типизацию и улучшенные инструменты разработки.",
+            "react": "JavaScript-библиотека для создания UI-компонентов, разработанная Meta, использующая виртуальный DOM для эффективности.",
+            "next": "React-фреймворк для рендеринга на стороне сервера, статических сайтов и фуллстек-приложений.",
+            "vue": "Прогрессивный JavaScript-фреймворк для создания UI с простой и гибкой архитектурой.",
+            "redux": "Библиотека управления состоянием для JS-приложений, использующая концепцию единого источника правды и неизменяемых данных.",
+            "tailwind": "CSS-фреймворк, предоставляющий набор утилитарных классов для быстрой разработки пользовательских интерфейсов.",
+            "figma": "Веб-инструмент для UI/UX дизайна, предназначенный для совместного проектирования, прототипирования и обратной связи.",
+            "jest": "JavaScript-фреймворк для тестирования, ориентированный на простоту, поддерживающий юнит-тестирование и снимки.",
+            "python": "Язык программирования высокого уровня, широко используемый в веб-разработке, анализе данных и машинном обучении.",
+            "node": "Среда выполнения кода JavaScript вне браузера, которая позволяет писать серверный код для веб-страниц и веб-приложений.",
+            "mongo": "NoSQL база данных, использующая гибкие, JSON-подобные документы для высокопроизводительного хранения данных.",
+            "postgresql": "Мощная реляционная база данных, обладающая расширенными функциями SQL и масштабируемостью.",
+            "webpack": "Сборщик модулей для JavaScript-приложений, оптимизирующий ресурсы для развертывания в продукции.",
+            "git": "Распределенная система контроля версий для отслеживания изменений кода и обеспечения совместной работы команды.",
+            "graphql": "Язык запросов для API, позволяющий клиентам запрашивать только необходимые данные и упрощающий взаимодействие с сервером.",
+            "rest": "Архитектурный стиль для веб-сервисов, использующий HTTP-запросы для доступа и манипулирования данными.",
+            "motion": "JavaScript-библиотека для создания анимаций и переходов в веб-приложениях.",
+            "eslint": "Инструмент статического анализа кода для выявления и исправления проблем в JavaScript/TypeScript.",
+            "prettier": "Инструмент форматирования кода, который автоматически форматирует код в соответствии с заданными правилами."
         },
         "Experience": {
             "title": "Опыт работы",
